--- a/vite/index.html
+++ b/vite/index.html
@@ -9,5 +9,10 @@
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
+        <script>
+            console.log(
+                'Plataforma Festa do Monte 2025\nDesenvolvida pela Câmara Municipal do Funchal - Divisão de Informação Geográfica\nDeveloper https://github.com/the-rfer '
+            );
+        </script>
     </body>
 </html>
